Bug 733744 - don't round short durations to zero r=birtles

Differential Revision: https://phabricator.services.mozilla.com/D195971